tests/baselines/reference/MemberFunctionDeclaration8_es6.errors.txt
<<<<<<< HEAD
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,12): error TS1127: Invalid character.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,14): error TS1109: Expression expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,9): error TS2304: Cannot find name 'a'.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,16): error TS2304: Cannot find name 'bar'.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(5,12): error TS2304: Cannot find name 'bar'.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts (5 errors) ====
    class C {
      foo() {
        // Make sure we don't think of *bar as the start of a generator method.
        if (a) # * bar;
               
!!! error TS1127: Invalid character.
                 ~
!!! error TS1109: Expression expected.
            ~
!!! error TS2304: Cannot find name 'a'.
                   ~~~
!!! error TS2304: Cannot find name 'bar'.
        return bar; 
               ~~~
!!! error TS2304: Cannot find name 'bar'.
      }
    }
=======
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,12): error TS1127: Invalid character.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,14): error TS1129: Statement expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,19): error TS1005: '(' expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(5,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(6,3): error TS1128: Declaration or statement expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(7,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,9): error TS2304: Cannot find name 'a'.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,16): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts (8 errors) ====
    class C {
      foo() {
        // Make sure we don't think of *bar as the start of a generator method.
        if (a) # * bar;
               
!!! error TS1127: Invalid character.
                 ~
!!! error TS1129: Statement expected.
                      ~
!!! error TS1005: '(' expected.
            ~
!!! error TS2304: Cannot find name 'a'.
                   ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        return bar; 
        ~~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
      }
      ~
!!! error TS1128: Declaration or statement expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
>>>>>>> prototypeAsync
